--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ $(document).ready(function(){
     <img class="img-lms" src="img/PicsArt_12-22-07.37.31.jpg" width="45%" style="align-items: center;">
     <br>
     <div class="button" style="align-items: center;">
-    <a href="#" class="btn btn-primary btn-lg" style="align-items: center;">LMS Portal Login</a>
+    <a href="https://lms.delasalle.lk" class="btn btn-primary btn-lg" style="align-items: center;">LMS Portal Login</a>
   </div>
   </div>
 <br>
