--- a/index.html
+++ b/index.html
@@ -665,10 +665,11 @@ $(document).ready(function(){
   </style>
   <div class="box1">
     <h1>Access the College LMS</h1>
-    <img class="img-lms" src="img/PicsArt_12-22-07.37.31.jpg" width="45%" style="align-items: center;">
+    <img class="img-lms" src="College Assests/College-Items/access-to-lms.png" width="45%" style="align-items: center;">
+    <br>
     <br>
     <div class="button" style="align-items: center;">
-    <a href="https://lms.delasalle.lk" class="btn btn-primary btn-lg" style="align-items: center;">LMS Portal Login</a>
+    <a href="https://lms.delasalle.lk" class="btn btn-primary btn-lg" style="align-items: center;    background-color: #da5d08;"><span class="css_blink"> Portal Login </span></a>
   </div>
   </div>
 <br>
@@ -1166,7 +1167,7 @@ $(document).ready(function(){
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                         <div>
-                            <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
+                            <a href="https://lms.delasalle.lk" target="_blank">
                             <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                             </a>
                           </div>
