--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@ $(document).ready(function(){
         <div class="row flex-row-reverse">
             <div class="col-md-7 col-lg-8 m-15px-tb">
                 <div class="contact-form">
-                     <form action="https://getform.io/f/379ccd75-5d00-4090-8e06-881d9c6addd8" method="POST" class="contactform contact_form" id="contact_form">
+                     <form action="https://getform.io/f/379ccd75-5d00-4090-8e06-881d9c6addd8" method="post" class="contactform contact_form" id="contact_form">
                         <div class="returnmessage valid-feedback p-15px-b" data-success="Your message has been received, We will contact you soon."></div>
                         <div class="empty_notice invalid-feedback p-15px-b"><span>Please Fill Required Fields</span></div>
                         <div class="row">
