--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@ $(document).ready(function(){
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input id="email" type="text" placeholder="Email Address" class="form-control">  
+                                    <input id="email" type="email" placeholder="Email Address" class="form-control">  
                                 </div>
                             </div>
                             <div class="col-12">
@@ -1120,12 +1120,12 @@ $(document).ready(function(){
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea id="message" placeholder="Message" class="form-control" rows="3"></textarea> 
+                                    <textarea id="message" type="text" placeholder="Message" class="form-control" rows="3"></textarea> 
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="send">
-                                    <a id="send_message" class="px-btn theme" href="#"><span>Contact Us</span> <i class="arrow"></i></a>
+                                    <a id="send_message" class="px-btn theme" type="submit"><span>Contact Us</span> <i class="arrow"></i></a>
                                 </div>
                             </div>
                         </div>
