--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@ $(document).ready(function(){
                             </div>
                             <div class="col-md-12">
                                 <div class="send">
-                                    <a id="send_message" class="px-btn theme" type="submit"><span>Contact Us</span> <i class="arrow"></i></a>
+                                    <button id="send_message" class="px-btn theme" type="submit"><span>Contact Us</span> <i class="arrow"></i></button>
                                 </div>
                             </div>
                         </div>
