--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@ $(document).ready(function(){
                                     <input id="email" type="email" placeholder="Email Address" class="form-control">  
                                 </div>
                             </div>
-                            <div class="col-12">
+                            <div class="col-md-12">
                                 <div class="form-group">
                                     <input id="subject" type="text" placeholder="Subject" class="form-control"> 
                                 </div>
