--- a/index.html
+++ b/index.html
@@ -1105,22 +1105,22 @@ $(document).ready(function(){
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input id="name" type="text" placeholder="Full Name" class="form-control"> 
+                                    <input id="name" type="text" placeholder="Full Name" class="form-control" required> 
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input id="email" type="email" placeholder="Email Address" class="form-control">  
+                                    <input id="email" type="email" placeholder="Email Address" class="form-control" required>  
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input id="subject" type="text" placeholder="Subject" class="form-control"> 
+                                    <input id="subject" type="text" placeholder="Subject" class="form-control" required> 
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea id="message" type="text" placeholder="Message" class="form-control" rows="3"></textarea> 
+                                    <textarea id="message" type="text" placeholder="Message" class="form-control" rows="3" required></textarea> 
                                 </div>
                             </div>
                             <div class="col-md-12">
