--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@ $(document).ready(function(){
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea id="message" type="text" placeholder="Message" class="form-control" rows="3"></textarea> 
+                                    <input id="message" type="text" placeholder="Message" class="form-control" rows="3">
                                 </div>
                             </div>
                             <div class="col-md-12">
