--- a/index.html
+++ b/index.html
@@ -1099,33 +1099,33 @@ $(document).ready(function(){
         <div class="row flex-row-reverse">
             <div class="col-md-7 col-lg-8 m-15px-tb">
                 <div class="contact-form">
-                     <form action="https://getform.io/f/379ccd75-5d00-4090-8e06-881d9c6addd8" method="POST" class="contactform contact_form" id="contact_form">
+                     <form action="https://getform.io/f/379ccd75-5d00-4090-8e06-881d9c6addd8" method="POST" class="contactform contact_form">
                         <!-- <div class="returnmessage valid-feedback p-15px-b" data-success="Your message has been received, We will contact you soon."></div> -->
                         <!-- <div class="empty_notice invalid-feedback p-15px-b"><span>Please Fill Required Fields</span></div> -->
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input id="name" type="text" placeholder="Full Name" class="form-control"> 
+                                    <input type="text" name="name" placeholder="Full Name" class="form-control"> 
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input id="email" type="email" placeholder="Email Address" class="form-control" required>  
+                                    <input type="email" name="email" placeholder="Email Address" class="form-control" required>  
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input id="subject" type="text" placeholder="Subject" class="form-control"> 
+                                    <input type="text" name="subject" placeholder="Subject" class="form-control"> 
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input id="message" type="text" placeholder="Message" class="form-control" rows="3">
+                                    <input type="text" name="message" placeholder="Message" class="form-control" rows="3">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="send">
-                                    <button id="send_message" class="px-btn theme" type="submit"><span> Contact Us </span> <i class="arrow"></i></button>
+                                    <button class="px-btn theme" type="submit"><span> Contact Us </span> <i class="arrow"></i></button>
                                 </div>
                             </div>
                         </div>
