Events & Contents Updated

--- a/announcements.html
+++ b/announcements.html
@@ -366,15 +366,15 @@ a {
                                 <div>
                                     <ul class="nolist list-unstyled position-relative mb-0 px-lg-5 pt-lg-5">
                                         <li class="border-bottom pb-3 mt-3">
-                                            <span class="meta text-uppercase">Sep 27th, 2021</span>
+                                            <span class="meta text-uppercase">Oct 7th, 2022</span>
                                             <h3 class="font-weight-bold mt-0">
                                                 <a href="#">
-                                                    Application form for A/L candidates 2023
+                                                    Special Program for childrens day,Teachers day celibration
                                                 </a>
                                             </h3>
-                                            <p class="m-0 post_intro">Dear Students and Parents,
+                                            <!-- <p class="m-0 post_intro">Dear Students and Parents,
 
-                                                Following is the link for the application form for A/L candidates 2023:</p>
+                                                </p> -->
                                         </li>
                                         </li>
                                     </ul>
@@ -395,7 +395,7 @@ a {
                     <div class="container">
                               <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                                 <div>
-                                    <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
+                                    <a href="https://lms.delasalle.lk" target="_blank">
                                     <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                                     </a>
                                   </div>
