Media, News and Contents updated

--- a/news.html
+++ b/news.html
@@ -493,6 +493,28 @@ body {
                             <div class="news-wrap">
                                         <div class="container">
                                             <div class="row">
+
+                                                <div class="col-md-4 col-lg-4 m-15px-tb">
+                                                    <div class="news-grid">
+                                                        <div class="news-grid-image"><img src="News and Events/Sinhala-Tamil-New-Year-2022/thumbnail.JPG" alt="">
+                                                            <div class="news-grid-box">
+                                                                <h1>7</h1>
+                                                                <p>APR</p>
+                                                                <p>2022</p>
+                                                            </div></div>
+                                                            <div class="news-grid-txt">
+                                                                <span>EVENTS</span>
+                                                                <h2>Sinhala Tamil New Year Celibration - 2022</h2>
+                                                                <ul>
+                                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 18, 2022</li>
+                                                                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                                                </ul>
+                                                                <p>Recent</p>
+                                                                <a href="">Available Soon...</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
                                                 <div class="col-md-4 col-lg-4 m-15px-tb">
                                                     <div class="news-grid">
                                                         <div class="news-grid-image"><img src="News and Events/Prefects-Investiture-Ceromony.jpg" alt="">
@@ -508,7 +530,7 @@ body {
                                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Jun 10, 2022</li>
                                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                                 </ul>
-                                                                <p>Recent</p>
+                                                                <p>Recent : The Content <span style="font-weight: bold">Prefects Investiture Ceromony</span> will be Update Soon</p>
                                                                 <a href="https://www.facebook.com/groups/4385030891619882/permalink/4918948844894748/">Read More...</a>
                                                             </div>
                                                         </div>
@@ -534,6 +556,27 @@ body {
                                                             </div>
                                                         </div>
                                                     </div>
+
+                                                    <div class="col-md-4 col-lg-4 m-15px-tb">
+                                                        <div class="news-grid">
+                                                            <div class="news-grid-image"><img src="News and Events/Principal-day-2022/IMG_9127.JPG" alt="">
+                                                                <div class="news-grid-box">
+                                                                    <h1>18</h1>
+                                                                    <p>JAN</p>
+                                                                    <p>2022</p>
+                                                                </div></div>
+                                                                <div class="news-grid-txt">
+                                                                    <span>EVENTS</span>
+                                                                    <h2>Principal Day Celibration</h2>
+                                                                    <ul>
+                                                                        <li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 18, 2022</li>
+                                                                        <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                                                    </ul>
+                                                                    <p></p>
+                                                                    <!-- <a href="https://www.facebook.com/groups/4385030891619882/permalink/4918948844894748/">Read More...</a> -->
+                                                                </div>
+                                                            </div>
+                                                        </div>
 
                                                     <br>
                                                     <br>
