Added Footer LMS Login

--- a/Academic-Progress.html
+++ b/Academic-Progress.html
@@ -347,7 +347,7 @@ background: #fff;
                     <div class="container">
                               <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                                 <div>
-                                    <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
+                                    <a href="https://lms.delasalle.lk" target="_blank">
                                     <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                                     </a>
                                   </div>
