--- a/Activities-in-Development-Stage.html
+++ b/Activities-in-Development-Stage.html
@@ -380,7 +380,7 @@ box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
                     <div class="container">
                               <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                                 <div>
-                                    <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
+                                    <a href="https://lms.delasalle.lk" target="_blank">
                                     <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                                     </a>
                                   </div>
