--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 }
 html {
     font-size: 62.5%;
-    background: #f1f2f3;
+    background: #0A0B3B;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -33,13 +33,14 @@ body {
     width: 100vw;
     margin: 0;
     padding: 4vmin;
-    color: #15171A;
+    color: #0A0B3B;
     font-size: 2rem;
     line-height: 1.4em;
     /*font-family: sans-serif;*/
     font-family: "Google Sans",arial,sans-serif;
     /*background: #f1f2f3;*/
-    background: #f3f5fe !important;
+    /* background: #f3f5fe !important; */
+    background: #0A0B3B !important;
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -63,9 +64,9 @@ body {
     background: #fff;
     border-radius: 20px;
     box-shadow:
-        0 50px 100px -20px rgb(50 50 93 / 8%),
-        0 30px 60px -30px rgb(0 0 0 / 13%),
-        0 10px 20px -10px rgb(0 0 0 / 8%);
+        0 50px 100px -20px rgba(156, 146, 146, 0.08),
+        0 30px 60px -30px rgba(177, 165, 165, 0.13),
+        0 10px 20px -10px rgba(250, 240, 240, 0.08);
 }
 
 .content svg{
@@ -73,7 +74,7 @@ body {
     width:50px;
     height:50px;
     fill:none !important;
-    stroke:#08102b;
+    stroke:#09044e;
     stroke-linecap:round;
     stroke-linejoin:round;
     stroke-width:1.5
