--- a/404.html
+++ b/404.html
@@ -33,14 +33,14 @@ body {
     width: 100vw;
     margin: 0;
     padding: 4vmin;
-    color: #0A0B3B;
+    color: #ffffff;
     font-size: 2rem;
     line-height: 1.4em;
     /*font-family: sans-serif;*/
     font-family: "Google Sans",arial,sans-serif;
     /*background: #f1f2f3;*/
-    /* background: #f3f5fe !important; */
-    background: #0A0B3B !important;
+    background: #f3f5fe !important;
+    /* background: #0A0B3B !important; */
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -61,7 +61,7 @@ body {
     margin: 0 0 4vmin;
     padding: 40px;
     text-align: center;
-    background: #fff;
+    background: #0A0B3B;
     border-radius: 20px;
     box-shadow:
         0 50px 100px -20px rgba(156, 146, 146, 0.08),
@@ -74,7 +74,7 @@ body {
     width:50px;
     height:50px;
     fill:none !important;
-    stroke:#09044e;
+    stroke:#ffffff;
     stroke-linecap:round;
     stroke-linejoin:round;
     stroke-width:1.5
