--- a/announcements.html
+++ b/announcements.html
@@ -364,7 +364,7 @@ a {
                     </br>
                             <div class="announcement-slider border-r-xs-0 border-r position-relative">
                                 <div>
-                                    <ul class="nolist list-unstyled position-relative mb-0 px-lg-5 pt-lg-5">
+<!--                                     <ul class="nolist list-unstyled position-relative mb-0 px-lg-5 pt-lg-5">
                                         <li class="border-bottom pb-3 mt-3">
                                             <span class="meta text-uppercase">Oct 7th, 2022</span>
                                             <h3 class="font-weight-bold mt-0">
@@ -380,7 +380,63 @@ a {
                                     </ul>
                                     <a class="all pos-stat text-uppercase ml-lg-5" href="announcements.html">All announcements
                                         <i class="fa fa-caret-right" aria-hidden="true"></i>
+                                    </a> -->
+	
+	
+                                    <ul class="nolist list-unstyled position-relative mb-0 px-lg-5 pt-lg-5">
+                                        <li class="border-bottom pb-3 mt-3">
+                                            <span class="meta text-uppercase">Oct 3th, 2022</span>
+                                            <h3 class="font-weight-bold mt-0">
+                                                <a href="#">
+                                                    Special Program for childrens day & Parents day celibration
+                                                </a>
+                                            </h3>
+                                            <!-- <p class="m-0 post_intro">Dear Students and Parents,
+
+                                                </p> -->
+                                        </li>
+                                        </li>
+                                    </ul>
+
+                                    <ul class="nolist list-unstyled position-relative mb-0 px-lg-5 pt-lg-5">
+                                        <li class="border-bottom pb-3 mt-3">
+                                            <span class="meta text-uppercase">Oct 6th, 2022</span>
+                                            <h3 class="font-weight-bold mt-0">
+                                                <a href="#">
+                                                    Teachers day celibration
+                                                </a>
+                                            </h3>
+                                            <!-- <p class="m-0 post_intro">Dear Students and Parents,
+
+                                                </p> -->
+                                        </li>
+                                        </li>
+                                    </ul>
+                                    <a class="all pos-stat text-uppercase ml-lg-5" href="announcements.html">All announcements
+                                        <i class="fa fa-caret-right" aria-hidden="true"></i>
                                     </a>
+
+
+                                    <ul class="nolist list-unstyled position-relative mb-0 px-lg-5 pt-lg-5">
+                                        <li class="border-bottom pb-3 mt-3">
+                                            <span class="meta text-uppercase">Oct 7th, 2022</span>
+                                            <h3 class="font-weight-bold mt-0">
+                                                <a href="#">
+                                                    Lasallion Concert - 1</a> <br>
+                                                    <span class="css_blink">  bloomy ones</span>
+                                            </h3>
+                                            <!-- <p class="m-0 post_intro">Dear Students and Parents,
+
+                                                </p> -->
+                                        </li>
+                                        </li>
+                                    </ul>
+                                    <a class="all pos-stat text-uppercase ml-lg-5" href="announcements.html">All announcements
+                                        <i class="fa fa-caret-right" aria-hidden="true"></i>
+                                    </a>
+
+                                    <br>
+                                </br>
 
                                 </div>
                             </div>
