--- a/announcements.html
+++ b/announcements.html
@@ -1367,7 +1367,7 @@ font-family: "Poppins", sans-serif;
                                          <div id="home" class="tab-pane fade in active clearfix">
                                             <div class="click clearfix">
                                              <div class="home_i col-sm-12 clearfix">
-                                              <h4 class="mgt bold">Onoing Events</h4>
+                                              <h4 class="mgt bold">Ongoing Events</h4>
                                               <p>None</p>
                                              </div>
                                             </div>
