--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ $(document).ready(function(){
                     	
                                 
                           <a class="alert-link" href="announcements.html" target="_blank"  > 	
-                            Recent Updated: <span class="css_blink "> Special Program for childrens day celibration </span></a>   		
+                            Recent Updated: <span class="css_blink "> Lasallion Concert - "Bloomy Ones" 2022 </span></a>   		
                               <img src="gif/new-gif.gif" alt="new.gif" width="auto" height="20px"> 
             </li> 
 
@@ -736,13 +736,13 @@ $(document).ready(function(){
                                 <div class="date">
                                         <span>
                                             <!-- Day -->
-                                            <div class="day">7</div>
+                                            <div class="day">03</div>
                                             <!-- Month Short Form (first three letters) -->
                                             <div class="month">Oct</div>
                                         </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Special Program for childrens day celibration</div>
+                                <div class="event-text">Special Program for childrens day celebration</div>
                             </div>
                         </li>
                         <li>
@@ -751,13 +751,13 @@ $(document).ready(function(){
                                 <div class="date">
                                             <span>
                                                 <!-- Day -->
-                                                <div class="day">0</div>
+                                                <div class="day">06</div>
                                                 <!-- Month Short Form (first three letters) -->
                                                 <div class="month">Oct</div>
                                             </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Upcomings will appear here</div>
+                                <div class="event-text">Teachers day celebration</div>
                             </div>
                         </li>
                         <li>
@@ -766,13 +766,13 @@ $(document).ready(function(){
                                 <div class="date">
                                             <span>
                                                 <!-- Day -->
-                                                <div class="day">0</div>
+                                                <div class="day">07</div>
                                                 <!-- Month Short Form (first three letters) -->
                                                 <div class="month">Oct</div>
                                             </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Upcomings wil appear here</div>
+                                <div class="event-text">Lasallion Concert - "Bloomy Ones"</div>
                             </div>
                         </li>
                         <li>
