--- a/news.html
+++ b/news.html
@@ -509,8 +509,8 @@ body {
                                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 18, 2022</li>
                                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                                 </ul>
-                                                                <p>Recent</p>
-                                                                <a href="">Available Soon...</a>
+                                                                <p>Sinhala and Tamil new year festival was celebrated in our school very colorfully today. The children got the opportunity to witness new year rituals according to relevant culture.New year games were organized for the enjoyment of children's.</p>
+                                                                <a href="">Read More...</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -530,7 +530,7 @@ body {
                                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Jun 10, 2022</li>
                                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                                 </ul>
-                                                                <p>Recent : The Content <span style="font-weight: bold">Prefects Investiture Ceromony</span> will be Update Soon</p>
+                                                                <p>Recent : The Content <span style="font-weight: bold">Prefects Investiture Ceromony</span> Wearing official badges for new prefect guild was held today. The parents of the new prefects participated to this event. </p>
                                                                 <a href="https://www.facebook.com/groups/4385030891619882/permalink/4918948844894748/">Read More...</a>
                                                             </div>
                                                         </div>
