--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ $(document).ready(function(){
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Snow Flakes-->
-<!--div class="snowflakes" aria-hidden="true">
+<div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
   ❅
   </div>
@@ -139,7 +139,7 @@ $(document).ready(function(){
   <div class="snowflake">
     ❆
   </div>
-</div-->
+</div>
 <style>
   .css_blink {
 	-webkit-animation-name: blinker;
