--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@ $(document).ready(function(){
       </svg> Reserved</p>
     <div class="container">
     <div>  
-        <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The website's contents are provided primarily for informational purposes. The DLS College ICT Unite maintains and updates the informations on a regular basis. We make every effort to ensure the accuracy and completeness of the material on this website, but we cannot guarantee its completeness or correctness. The information on the DLS College Official Website cannot be used to obtain certain rights. The website may contain links to third-party organizations' websites. We are not responsible for any consequences which may occur from the use of information obtained from these websites. Designed and Developed by Kasun Chanuka Fernando</font></p>
+        <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The website's contents are provided primarily for informational purposes. The DLS College ICT Unite maintains and updates the informations on a regular basis. We make every effort to ensure the accuracy and completeness of the material on this website, but we cannot guarantee its completeness or correctness. The information on the DLS College Official Website cannot be used to obtain certain rights. The website may contain links to third-party organizations' websites. We are not responsible for any consequences which may occur from the use of information obtained from these websites. Designed and Developed by <a href="https://github.com/kasuncfdo/dls">Kasun Chanuka Fernando </a> </font></p>
         </div>
     </div>
             </div>
